tests/sema/golden/04_if_non_bool.out
tests/sema/bad/04_if_non_bool.sg:1:1: error: if condition must be bool
  if (1) { }
  ^
